argocd/media-server/kometa/manifests/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kometa
spec:
  endpointSelector:
    matchLabels:
      app: kometa
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: plex
            app: plex
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: radarr
            app: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            app: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
